--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 				name="partner_company">
 		</div>
 		<button id="tinh" class="btn btn-success btn-block">Tính</button>
-		<div class="m-4">Kết quả là:<span id="ketqua"></span> </div>
+		<div class="m-4">Kết quả là: <span id="ketqua"></span> </div>
+		<div class="m-4">Số lượng: <span id="soluong"></span></div>
 	</div>
 	<script src="./assets/js/script.js"></script>
 </body>
