--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						name="partner_company">
 				</div>
 				<button id="tinhIG" class="btn btn-success btn-block">Tính</button>
-				<div class="m-4">Kết quả là IG=: <span id="ig"></span> </div>
+				<div class="m-4">Kết quả là IG= <span id="ig"></span> </div>
 			</div>
 		</div>
 	</div>
